# skin-disease-mlops

./: .env.example  .gitignore  Dockerfile  README.md  critères_évaluation.txt  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml  retrain.yml
api/: main.py
docs/: presentation_outline.md
k8s/: README.md  api.yaml  minio.yaml  mlflow.yaml  namespace.yaml  secrets.yaml.example
monitoring/: drift_report.py
notebooks/: 01_eda_baseline.ipynb
retrain/: run.py
scripts/: deploy_k8s.sh  generate_demo_data.py  run_data_pipeline.py  setup_minio.sh
src/data/: data_sync.py  dataset_layout.py  kaggle_fetch.py  make_dataset.py  subset_dataset.py
src/training/: dataset.py  evaluate.py  model.py  train.py
src/utils/: config.py  s3_storage.py
tests/: conftest.py  test_api.py  test_preprocessing.py  test_training.py
